--- a/UniNotes2/app/src/main/res/menu/menu_main.xml
+++ b/UniNotes2/app/src/main/res/menu/menu_main.xml
@@ -2,10 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="iftikhar.danayal.uninotes.MainActivity">
-    <item
-        android:id="@+id/action_create"
-        android:orderInCategory="100"
-        android:title="@string/action_create"
-        android:icon="@drawable/create_note"
-        app:showAsAction="always|withText" />
+    <!--<item-->
+        <!--android:id="@+id/action_create"-->
+        <!--android:orderInCategory="100"-->
+        <!--android:title="@string/action_create"-->
+        <!--android:icon="@drawable/create_note"-->
+        <!--app:showAsAction="always|withText" />-->
 </menu>
