--- a/UniNotes2/app/src/main/res/layout/activity_main.xml
+++ b/UniNotes2/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay"
-        android:id="@+id/listView">
+        android:id="@+id/AppBar">
 
 
         <android.support.v7.widget.Toolbar
@@ -32,7 +32,8 @@
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@android:id/list" />
+        android:id="@android:id/list"
+        android:layout_below="@+id/AppBar" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -40,12 +41,12 @@
         android:layout_height="wrap_content"
         android:text="@string/action_create"
         android:id="@+id/action_create"
-        android:layout_below="@+id/listView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="44dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="50dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp" />
 
 
     <!--<android.support.design.widget.FloatingActionButton-->
@@ -58,4 +59,4 @@
 
 
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
