--- a/UniNotes2/app/src/main/res/menu/menu_main.xml
+++ b/UniNotes2/app/src/main/res/menu/menu_main.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="iftikhar.danayal.uninotes.MainActivity">
     <!--<item-->
-        <!--android:id="@+id/action_create"-->
+        <!--android:id="@+id/create"-->
         <!--android:orderInCategory="100"-->
         <!--android:title="@string/action_create"-->
         <!--android:icon="@drawable/create_note"-->
